@@ -27,19 +27,19 @@ public final class LongMath extends NumberMath {
     private LongMath() {}
                     
     protected Number absImpl(Number number) {
-        return new Long(Math.abs(number.longValue()));
+        return Long.valueOf(Math.abs(number.longValue()));
     }
     
     public Number addImpl(Number left, Number right) {
-        return new Long(left.longValue() + right.longValue());
+        return Long.valueOf(left.longValue() + right.longValue());
     }
 
     public Number subtractImpl(Number left, Number right) {
-        return new Long(left.longValue() - right.longValue());
+        return Long.valueOf(left.longValue() - right.longValue());
     }
 
     public Number multiplyImpl(Number left, Number right) {
-        return new Long(left.longValue() * right.longValue());
+        return Long.valueOf(left.longValue() * right.longValue());
     }
 
     public Number divideImpl(Number left, Number right) {
@@ -53,46 +53,46 @@ public final class LongMath extends NumberMath {
     }
 
     protected Number intdivImpl(Number left, Number right) {
-        return new Long(left.longValue() / right.longValue());
+        return Long.valueOf(left.longValue() / right.longValue());
     }
     
     protected Number modImpl(Number left, Number right) {
-        return new Long(left.longValue() % right.longValue());
+        return Long.valueOf(left.longValue() % right.longValue());
     }
     
     protected Number unaryMinusImpl(Number left) {
-        return new Long(-left.longValue());
+        return Long.valueOf(-left.longValue());
     }
     
     protected Number bitwiseNegateImpl(Number left) {
-        return new Long(~left.longValue());
+        return Long.valueOf(~left.longValue());
     }
     
     protected Number orImpl(Number left, Number right) {
-        return new Long(left.longValue() | right.longValue());
+        return Long.valueOf(left.longValue() | right.longValue());
     }
 
     protected Number andImpl(Number left, Number right) {
-        return new Long(left.longValue() & right.longValue());
+        return Long.valueOf(left.longValue() & right.longValue());
     }
     
     protected Number xorImpl(Number left, Number right) {
-        return new Long(left.longValue() ^ right.longValue());
+        return Long.valueOf(left.longValue() ^ right.longValue());
     }
     
     protected Number leftShiftImpl(Number left, Number right) {
-        return new Long(left.longValue() << right.longValue());
+        return Long.valueOf(left.longValue() << right.longValue());
     }
 
     protected Number rightShiftImpl(Number left, Number right) {
-        return new Long(left.longValue() >> right.longValue());
+        return Long.valueOf(left.longValue() >> right.longValue());
     }
 
     protected Number rightShiftUnsignedImpl(Number left, Number right) {
-        return new Long(left.longValue() >>> right.longValue());
+        return Long.valueOf(left.longValue() >>> right.longValue());
     }
 
     protected Number bitAndImpl(Number left, Number right) {
-        return new Long(left.longValue() & right.longValue());
+        return Long.valueOf(left.longValue() & right.longValue());
     }
 }
